--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,8 @@
 name: npm-publish
 on:
   push:
-    branches:
-      - master
+    tags:
+      - '*'
 jobs:
   npm-publish:
     name: npm-publish
@@ -18,10 +18,6 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Publish if version has been updated
-        uses: pascalgn/npm-publish-action@1.2.0
-        with:
-          tag_name: "%s"
+      - run: npm publish --access public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
